# MyDoodle

./: CMakeLists.txt  Entity.cpp  Entity.h  GameController.cpp  GameController.h  GameHandler.cpp  GameHandler.h  Items.cpp  Items.h  Jumper.cpp  Jumper.h  Manager.cpp  Manager.h  Menu.cpp  Menu.h  MovingTiles.cpp  MovingTiles.h  README.md  Scores.cpp  Scores.h  StaticView.cpp  StaticView.h  Subtitles.cpp  Subtitles.h  Tiles.cpp  Tiles.h  main.cpp
